--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,11 @@ services:
       - ./mosquitto/data:/mosquitto/data 
       - ./mosquitto/log:/mosquitto/log 
     restart: unless-stopped
-
-    
-    
-    
+  mqttx-web:
+   image: emqx/mqttx-web
+   container_name: mqttx_web
+   ports:
+     -  "8081:80" # Interface Web
+   depends_on:
+     - mqtt
+   restart: unless-stopped
