--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -3,3 +3,8 @@ allow_anonymous true
 log_dest file /mosquitto/log/mosquitto.log
 log_type all # Active tous les logs (messages, connexions, erreurs, etc.)
 
+# Activation des WebSockets
+listener 9001
+protocol websockets
+- "9001:9001" # Websocket
+
